--- a/index.html
+++ b/index.html
@@ -1,113 +1,115 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
+<!DOCTYPE html>
+<html>
 
 <head>
-<meta http-equiv="Content-Language" content="en-us" />
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled 1</title>
-<style type="text/css">
-.style1 {
-	background-color: #99CCFF;
-}
-.style10 {
-	text-align: center;
-	color: #FF0000;
-	font-size: xx-large;
-}
-.style14 {
-	text-align: center;
-	color: #009933;
-	font-size: xx-large;
-}
-.style13 {
-	text-align: center;
-	color: #0000FF;
-	text-decoration: underline;
-	font-size: xx-large;
-}
-.style15 {
-	text-align: center;
-	color: #0000FF;
-	font-size: xx-large;
-}
-</style>
-<script type="text/javascript">
-<!--
-function FP_swapImg() {//v1.0
- var doc=document,args=arguments,elm,n; doc.$imgSwaps=new Array(); for(n=2; n<args.length;
- n+=2) { elm=FP_getObjectByID(args[n]); if(elm) { doc.$imgSwaps[doc.$imgSwaps.length]=elm;
- elm.$src=elm.src; elm.src=args[n+1]; } }
-}
-
-function FP_preloadImgs() {//v1.0
- var d=document,a=arguments; if(!d.FP_imgs) d.FP_imgs=new Array();
- for(var i=0; i<a.length; i++) { d.FP_imgs[i]=new Image; d.FP_imgs[i].src=a[i]; }
-}
-
-function FP_getObjectByID(id,o) {//v1.0
- var c,el,els,f,m,n; if(!o)o=document; if(o.getElementById) el=o.getElementById(id);
- else if(o.layers) c=o.layers; else if(o.all) el=o.all[id]; if(el) return el;
- if(o.id==id || o.name==id) return o; if(o.childNodes) c=o.childNodes; if(c)
- for(n=0; n<c.length; n++) { el=FP_getObjectByID(id,c[n]); if(el) return el; }
- f=o.forms; if(f) for(n=0; n<f.length; n++) { els=f[n].elements;
- for(m=0; m<els.length; m++){ el=FP_getObjectByID(id,els[n]); if(el) return el; } }
- return null;
-}
-// -->
-</script>
+    <title>RICH TECHNOLOGIES</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:100,300' rel='stylesheet' type='text/css'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </head>
 
-<body onload="FP_preloadImgs(/*url*/'button19.jpg',/*url*/'button1A.jpg',/*url*/'button1C.jpg',/*url*/'button1D.jpg',/*url*/'button1F.jpg',/*url*/'button20.jpg',/*url*/'button22.jpg',/*url*/'button23.jpg')">
+<body>
+<ul class="prodmenu">
+	<li>
+		<a href="product.php?cat=wl"><span>Water Level Indicators</span></a>
+	</li>
+	<li>
+		<a href="product.php?cat=saw"><span>Semi-Automatic Water Level Controller</span></a>
+	</li>
+	<li>
+		<a href="product.php?cat=aw"><span>Automatic Water Level Controller</span></a>
+	</li>
+</ul>
+    <div class="top">
+        <div class="name">Rich Technologies</div>
+        <div class="trig">&equiv;</div>
+        <ul class="menu">
+            <li><a href="">Home</a></li>
+            <li class="prod_menu"><a style="cursor:default">Products</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+    </div>
+    <div class="mid">
+        <div class="slide">
+            <div>
+            	<h2>Welcome to Rich Technologies</h2>
+                <br>
+                <h3>Any type of Water Solution<br>Only Option Rich Technologies.</h3>
+                <h4>" LIVE LIFE RICH STYLE "</h4>
+            </div>
+            
+        </div>
+        <div class="slide">
+            <div>
+            <h2>
+                RICH TECHNOLOGIES</h2><h3> is an organization engaged in the business of </h3><h3>"WATER LEVEL CONTROLLER & INDICATOR" </h3><h3> for the past 25 years atering to over 40,000 clients.
+                </h3>
+            </div>
+            
+        </div>
+        <div class="slide">
+            <div>
+                <h2>RICH TECHNOLOGIES</h2><h3 style="font-weight:400">provides only high quality products. <br>RICH TECHNOLOGIES have achieved remarkable success totally on the basis of the quality products provided to the customer.<br> These products are based on latest technology. <br>They are solid state device using the latest technology, engineered to suit Indian conditions.
+                </h3>
+            </div>
+        </div>
+        <div class="slide">
+            <div>
+                <h2>RICH TECHNOLOGIES</h2> <br><h3 style="font-weight:400;">is leader in its field by virtue of being continuous learning organization.<br> They offer the combination of the Quality and Technology that shall be synonymous with the value for money,<br> customer satisfaction and high quality products.</h3>
+            </div>
+        </div>
+        <div style="display:block" class="coursel">
 
-<div style="position: absolute; width: 852px; height: 620px; z-index: 1; left: 93px; top: 10px" id="layer1" class="style1">
-	<br />
-	<br />
-	<br />
-	<br />
-	<br />
-	<br />
-	<br />
-	<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<div style="position: absolute; width: 690px; height: 88px; z-index: 1; left: 74px; top: 11px" id="layer2">
-		<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=8,0,0,0" WIDTH="728" HEIGHT="90" id="test slideshow" align="middle">
-			<param NAME="movie" VALUE="Rich_banner.swf" />
-			<param NAME="quality" VALUE="high" />
-			<param NAME="allowScriptAccess" VALUE="sameDomain" />
-			<param NAME="bgcolor" VALUE="#000000" />
-			<embed Name="slideshow" src="Rich_banner.swf" quality="high" bgcolor="#FFFFFF" WIDTH="728" HEIGHT="90" TYPE="application/x-shockwave-flash" PLUGINSPAGE="http://www.macromedia.com/go/getflashplayer" />
-        </object>    
+        </div>
+    </div>
+    <div class="intro">
+        <div>
+            <h3>
+            	Save Energy, Save Water.
+            </h3>
+        </div>
+    </div>
+    <div class="popular">
+    <div>
+        <div>
+        <h1>Popular Products</h1>
+            <div class="pro">
+                <h1>Aqua Rich Plus</h1>
+                <p>
+                    Details: Automatic Water Level Controller
+                    <br><a href="product.php?cat=aw&p=7">Read More</a>
+                </p>
+            </div>
+            <div class="pro">
+                <h1>Level aid Junior</h1>
+                <p>
+                    Details: Water Level Indicator
+                    <br><a href="product.php?cat=wl&p=1">Read More</a>
+                </p>
+            </div>
+            <div class="pro">
+                <h1>Aqua Rich Bubble</h1>
+                <p>
+                    Details: Automatic Water Level Controller
+                    <br><a href="product.php?cat=aw&p=3">Read More</a>
+                </p>
+            </div>
+            <div class="pro">
+                <h1>Aqua Rich Boss</h1>
+                <p>
+                    Details: Automatic Water Level Controller
+                    <br><a href="product.php?cat=aw&p=10">Read More</a>
+                </p>
+            </div>
+        </div>
 	</div>
-	<br>
-	<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="home.htm">
-	<img style="border: 0" id="img3" src="button18.jpg" height="25" width="125" alt="HOME" onmouseover="FP_swapImg(1,0,/*id*/'img3',/*url*/'button19.jpg')" onmouseout="FP_swapImg(0,0,/*id*/'img3',/*url*/'button18.jpg')" onmousedown="FP_swapImg(1,0,/*id*/'img3',/*url*/'button1A.jpg')" onmouseup="FP_swapImg(0,0,/*id*/'img3',/*url*/'button19.jpg')" /><!-- MSComment="ibutton" fp-style="fp-btn: Soft Rectangle 10; fp-font-style: Bold; fp-font-size: 12; fp-font-color-normal: #FF0000; fp-font-color-hover: #008080" fp-title="HOME" --></a><br />
-	<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="Product.htm">
-	<img style="border: 0" id="img4" src="button1B.jpg" height="25" width="125" alt="PRODUCT" onmouseover="FP_swapImg(1,0,/*id*/'img4',/*url*/'button1C.jpg')" onmouseout="FP_swapImg(0,0,/*id*/'img4',/*url*/'button1B.jpg')" onmousedown="FP_swapImg(1,0,/*id*/'img4',/*url*/'button1D.jpg')" onmouseup="FP_swapImg(0,0,/*id*/'img4',/*url*/'button1C.jpg')" /><!-- MSComment="ibutton" fp-style="fp-btn: Soft Rectangle 10; fp-font-style: Bold; fp-font-size: 12; fp-font-color-normal: #FF0000; fp-font-color-hover: #008080" fp-title="PRODUCT" --></a><br />
-	<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="about%20us.htm">
-	<img style="border: 0" id="img1" src="button1E.jpg" height="25" width="125" alt="ABOUT US" onmouseover="FP_swapImg(1,0,/*id*/'img1',/*url*/'button1F.jpg')" onmouseout="FP_swapImg(0,0,/*id*/'img1',/*url*/'button1E.jpg')" onmousedown="FP_swapImg(1,0,/*id*/'img1',/*url*/'button20.jpg')" onmouseup="FP_swapImg(0,0,/*id*/'img1',/*url*/'button1F.jpg')" /></a><!-- MSComment="ibutton" fp-style="fp-btn: Soft Rectangle 10; fp-font-style: Bold; fp-font-size: 12; fp-font-color-normal: #FF0000; fp-font-color-hover: #008080" fp-title="ABOUT US" --><br />
-	<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="contact%20us.htm">
-	<img style="border: 0" id="img5" src="button21.jpg" height="25" width="125" alt="CONTACT US" onmouseover="FP_swapImg(1,0,/*id*/'img5',/*url*/'button22.jpg')" onmouseout="FP_swapImg(0,0,/*id*/'img5',/*url*/'button21.jpg')" onmousedown="FP_swapImg(1,0,/*id*/'img5',/*url*/'button23.jpg')" onmouseup="FP_swapImg(0,0,/*id*/'img5',/*url*/'button22.jpg')" /></a><!-- MSComment="ibutton" fp-style="fp-btn: Soft Rectangle 10; fp-font-style: Bold; fp-font-size: 12; fp-font-color-normal: #FF0000; fp-font-color-hover: #008080" fp-title="CONTACT US" --><div style="position: absolute; width: 523px; height: 196px; z-index: 2; left: 279px; top: 174px" id="layer3">
-		<p class="style10"><strong>ANY TYPE OF WATER SOLUTION</strong></p>
-		<p class="style14"><strong>ONLY OPTION</strong></p>
-		<p class="style13"><strong>RICH TECHNOLOGIES</strong></p>
-		<p class="style15"><strong>" LIVE LIFE RICH STYLE".</strong></p>
-	</div>
-	<div style="position: absolute; width: 143px; height: 211px; z-index: 3; left: 76px; top: 386px" id="layer4">
-<!-- URL's used in the movie-->
-<!-- text used in the movie-->
-		<object classid="clsid:D27CDB6E-AE6D-11CF-96B8-444553540000" id="obj1" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0" border="0" width="147" height="125">
-			<param name="movie" value="new_12/santosh.swf">
-			<param name="quality" value="High">
-			<embed src="new_12/santosh.swf" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" name="obj1" width="147" height="125"></object>
-	</div>
-</div>
+    </div>
+    <div class="footer">
+    	Rich Techologies &copy; <span class="year"></span>.
+        <img src="watermark.png">
+    </div>
+</body>
 
 </html>
